// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCar debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product CARD
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCar debe de mostrar el componente correctamente  1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola ProductCar
  </h1>
</div>
`;
